add form-group to HTML

--- a/index.html
+++ b/index.html
@@ -8,6 +8,45 @@
     <title></title>
   </head>
   <body>
+    <div class="container-fluid">
+      <div class="jumbotron">
+        <h1>Pizza for Peeps</h1>
+        <h2>Place your order here:</h2>
+      </div>
 
+      <div class="form-group">
+        <!-- pizza size goes here -->
+        <label for="user-input">PIZZA SIZE:</label>
+          <input id="user-input" type="number">
+        </div>
+        <button type="submit" class="btn"><em>Ping! Pong!</button>
+      </div>
+
+      <div class="form-group">
+        <!-- individual toppings here -->
+        <label for="user-input">CHOOSE INDIVIDUAL TOPPINGS:</label>
+          <input id="user-input" type="number">
+        </div>
+        <button type="submit" class="btn"><em>Ping! Pong!</button>
+      </div>
+
+      <div class="form-group">
+        <!-- add additional toppings here -->
+        <label for="user-input">ADD ADDITIONAL TOPPINGS:</label>
+          <input id="user-input" type="number">
+        </div>
+        <button type="submit" class="btn"><em>Ping! Pong!</button>
+      </div>
+
+      <div class="form-group">
+        <!-- total order cost goes here -->
+        <label for="user-input">ORDER TOTAL:</label>
+          <input id="user-input" type="number">
+        </div>
+        <button type="submit" class="btn"><em>Ping! Pong!</button>
+      </div>
+
+
+    </div>
   </body>
 </html>
