add div class for forms

--- a/index.html
+++ b/index.html
@@ -14,18 +14,21 @@
         <h2>Place your order here:</h2>
       </div>
 
-      <div class="form-group">
-        <!-- pizza size goes here -->
-        <label for="user-input">PIZZA SIZE:</label>
-          <input id="user-input" type="number">
-        </div>
-        <button type="submit" class="btn"><em>Ping! Pong!</button>
+      <div class="checkbox">
+        <label class="checkbox-inline"><input type="checkbox"value="">Small</label>
+        <label class="checkbox-inline"><input type="checkbox"value="">Medium</label>
+        <label class="checkbox-inline"><input type="checkbox"value="">Large</label>
+        <label class="checkbox-inline"><input type="checkbox"value="">Family</label>
+        <!-- <select id="small" type="checkbox" name="small">
+      </div> -->
       </div>
 
       <div class="form-group">
         <!-- individual toppings here -->
         <label for="user-input">CHOOSE INDIVIDUAL TOPPINGS:</label>
-          <input id="user-input" type="number">
+          <input id="user-input" type="checkbox" name="meat">
+          <input id="user-input" type="checkbox" name="cheese">
+          <input id="user-input" type="checkbox" name="veggie">
         </div>
         <button type="submit" class="btn"><em>Ping! Pong!</button>
       </div>
@@ -33,7 +36,9 @@
       <div class="form-group">
         <!-- add additional toppings here -->
         <label for="user-input">ADD ADDITIONAL TOPPINGS:</label>
-          <input id="user-input" type="number">
+        <input id="user-input" type="checkbox" name="meat">
+        <input id="user-input" type="checkbox" name="cheese">
+        <input id="user-input" type="checkbox" name="veggie">
         </div>
         <button type="submit" class="btn"><em>Ping! Pong!</button>
       </div>
