--- a/index.html
+++ b/index.html
@@ -10,48 +10,52 @@
   <body>
     <div class="container-fluid">
       <div class="jumbotron">
-        <h1>Pizza for Peeps</h1>
-        <h2>Place your order here:</h2>
+        <h1>Pizza 4 Peeps</h1>
+        <h2>Pick Your Preference, Place Your Order</h2>
       </div>
 
+      <h3>Start by Choosing a Size:</h3>
       <div class="checkbox">
-        <label class="checkbox-inline"><input type="checkbox"value="">Small</label>
-        <label class="checkbox-inline"><input type="checkbox"value="">Medium</label>
-        <label class="checkbox-inline"><input type="checkbox"value="">Large</label>
-        <label class="checkbox-inline"><input type="checkbox"value="">Family</label>
-        <!-- <select id="small" type="checkbox" name="small">
-      </div> -->
+        <label class="checkbox-inline"><input type="checkbox"value="3">Small</label>
+        <label class="checkbox-inline"><input type="checkbox"value="4">Medium</label>
+        <label class="checkbox-inline"><input type="checkbox"value="5">Large</label>
+        <label class="checkbox-inline"><input type="checkbox"value="6">Family</label>
+      </div>
+      <br>
+      <div class="well">
+        <h3>Choose One or More of the Following Toppings:</h3>
       </div>
 
-      <div class="form-group">
-        <!-- individual toppings here -->
-        <label for="user-input">CHOOSE INDIVIDUAL TOPPINGS:</label>
-          <input id="user-input" type="checkbox" name="meat">
-          <input id="user-input" type="checkbox" name="cheese">
-          <input id="user-input" type="checkbox" name="veggie">
-        </div>
-        <button type="submit" class="btn"><em>Ping! Pong!</button>
+      <h3>Cheese:</h3>
+      <div class="checkbox">
+        <label class="checkbox-inline"><input type="checkbox"value="2">Mozzarella</label>
+        <label class="checkbox-inline"><input type="checkbox"value="2">Provolone</label>
+        <label class="checkbox-inline"><input type="checkbox"value="2">Parmesan</label>
       </div>
 
-      <div class="form-group">
-        <!-- add additional toppings here -->
-        <label for="user-input">ADD ADDITIONAL TOPPINGS:</label>
-        <input id="user-input" type="checkbox" name="meat">
-        <input id="user-input" type="checkbox" name="cheese">
-        <input id="user-input" type="checkbox" name="veggie">
-        </div>
-        <button type="submit" class="btn"><em>Ping! Pong!</button>
+      <h3>Meat:</h3>
+      <div class="checkbox">
+        <label class="checkbox-inline"><input type="checkbox"value="3">Sausage</label>
+        <label class="checkbox-inline"><input type="checkbox"value="3">Pepperoni</label>
+        <label class="checkbox-inline"><input type="checkbox"value="3">Canadian Bacon</label>
+        <label class="checkbox-inline"><input type="checkbox"value="3">Chicken</label>
       </div>
 
+      <h3>Veggies:</h3>
+      <div class="checkbox">
+        <label class="checkbox-inline"><input type="checkbox"value="1">Olives</label>
+        <label class="checkbox-inline"><input type="checkbox"value="1">Mushrooms</label>
+        <label class="checkbox-inline"><input type="checkbox"value="1">Onions</label>
+        <label class="checkbox-inline"><input type="checkbox"value="1">Peppers</label>
+        <label class="checkbox-inline"><input type="checkbox"value="1">Artichokes</label>
+      </div>
+      <br>
       <div class="form-group">
         <!-- total order cost goes here -->
-        <label for="user-input">ORDER TOTAL:</label>
+        <label for="user-input">ORDER TOTAL: $ </label>
           <input id="user-input" type="number">
-        </div>
-        <button type="submit" class="btn"><em>Ping! Pong!</button>
       </div>
-
-
+        <button type="submit" class="btn"><em><strong>Place Your Order Here:</strong></button>
     </div>
   </body>
 </html>
