--- a/index.html
+++ b/index.html
@@ -13,48 +13,48 @@
         <h1>Pizza 4 Peeps</h1>
         <h2>Pick Your Preference, Place Your Order</h2>
       </div>
-
       <h3>Start by Choosing a Size:</h3>
-      <div class="checkbox">
-        <label class="checkbox-inline"><input type="checkbox"value="3">Small</label>
-        <label class="checkbox-inline"><input type="checkbox"value="4">Medium</label>
-        <label class="checkbox-inline"><input type="checkbox"value="5">Large</label>
-        <label class="checkbox-inline"><input type="checkbox"value="6">Family</label>
-      </div>
-      <br>
-      <div class="well">
-        <h3>Choose One or More of the Following Toppings:</h3>
-      </div>
+      <form id="pizzaOrder">
+        <div class="form-group">
+          <div class="checkbox">
+            <label class="checkbox-inline"><input type="checkbox"value="3">Small</label>
+            <label class="checkbox-inline"><input type="checkbox"value="4">Medium</label>
+            <label class="checkbox-inline"><input type="checkbox"value="5">Large</label>
+            <label class="checkbox-inline"><input type="checkbox"value="6">Family</label>
+          </div>
+          <br>
+          <div class="well">
+            <h3>Choose One or More of the Following Toppings:</h3>
+          </div>
 
-      <h3>Cheese:</h3>
-      <div class="checkbox">
-        <label class="checkbox-inline"><input type="checkbox"value="2">Mozzarella</label>
-        <label class="checkbox-inline"><input type="checkbox"value="2">Provolone</label>
-        <label class="checkbox-inline"><input type="checkbox"value="2">Parmesan</label>
-      </div>
+          <h3>Cheese:</h3>
+          <div class="checkbox">
+            <label class="checkbox-inline"><input type="checkbox"value="2">Mozzarella</label>
+            <label class="checkbox-inline"><input type="checkbox"value="2">Provolone</label>
+            <label class="checkbox-inline"><input type="checkbox"value="2">Parmesan</label>
+          </div>
 
-      <h3>Meat:</h3>
-      <div class="checkbox">
-        <label class="checkbox-inline"><input type="checkbox"value="3">Sausage</label>
-        <label class="checkbox-inline"><input type="checkbox"value="3">Pepperoni</label>
-        <label class="checkbox-inline"><input type="checkbox"value="3">Canadian Bacon</label>
-        <label class="checkbox-inline"><input type="checkbox"value="3">Chicken</label>
-      </div>
+          <h3>Meat:</h3>
+          <div class="checkbox">
+            <label class="checkbox-inline"><input type="checkbox"value="3">Sausage</label>
+            <label class="checkbox-inline"><input type="checkbox"value="3">Pepperoni</label>
+            <label class="checkbox-inline"><input type="checkbox"value="3">Canadian Bacon</label>
+            <label class="checkbox-inline"><input type="checkbox"value="3">Chicken</label>
+          </div>
 
-      <h3>Veggies:</h3>
-      <div class="checkbox">
-        <label class="checkbox-inline"><input type="checkbox"value="1">Olives</label>
-        <label class="checkbox-inline"><input type="checkbox"value="1">Mushrooms</label>
-        <label class="checkbox-inline"><input type="checkbox"value="1">Onions</label>
-        <label class="checkbox-inline"><input type="checkbox"value="1">Peppers</label>
-        <label class="checkbox-inline"><input type="checkbox"value="1">Artichokes</label>
-      </div>
-      <br>
-      <div class="form-group">
-        <!-- total order cost goes here -->
-        <label for="user-input">ORDER TOTAL: $ </label>
+          <h3>Veggies:</h3>
+          <div class="checkbox">
+            <label class="checkbox-inline"><input type="checkbox"value="1">Olives</label>
+            <label class="checkbox-inline"><input type="checkbox"value="1">Mushrooms</label>
+            <label class="checkbox-inline"><input type="checkbox"value="1">Onions</label>
+            <label class="checkbox-inline"><input type="checkbox"value="1">Peppers</label>
+            <label class="checkbox-inline"><input type="checkbox"value="1">Artichokes</label>
+          </div>
+          <br>
+          <label for="user-input">ORDER TOTAL: $ </label>
           <input id="user-input" type="number">
-      </div>
+        </div>
+      </form>
         <button type="submit" class="btn"><em><strong>Place Your Order Here:</strong></button>
     </div>
   </body>
