--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Pizza 4 Peeps</h1>
         <h2>Pick Your Preference, Place Your Order</h2>
       </div>
-      <h3>Start by Choosing a Size:</h3>
+      <h3>Start by Choosing a Pie Size:</h3>
       <form id="pizzaOrder">
         <div class="form-group">
           <div class="checkbox">
@@ -32,6 +32,7 @@
             <label class="checkbox-inline"><input type="checkbox"value="2">Mozzarella</label>
             <label class="checkbox-inline"><input type="checkbox"value="2">Provolone</label>
             <label class="checkbox-inline"><input type="checkbox"value="2">Parmesan</label>
+            <label class="checkbox-inline"><input type="checkbox"value="2">Asiago</label>
           </div>
 
           <h3>Meat:</h3>
